<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SubmitActivity"
    >
    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/submit_activity_toolbar">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="?android:attr/actionBarSize"
            android:layout_marginRight="?android:attr/actionBarSize"
            android:orientation="vertical">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                android:src="@drawable/gads_logo"
                android:contentDescription="@string/logo" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/submission_title"
                android:textSize="20sp"
                android:gravity="center"
                android:textColor="@color/orange"/>
            <View
                android:layout_width="match_parent"
                android:layout_marginTop="8dp"
                android:layout_height="2dp"
                android:background="@drawable/divider" />
        </LinearLayout>

    </androidx.appcompat.widget.Toolbar>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin">
        <LinearLayout
            android:id="@+id/name_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="10"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/email_input_layout"
            android:baselineAligned="false">
        <com.google.android.material.textfield.TextInputLayout
            app:boxCornerRadiusBottomEnd="@dimen/text_input_corner"
            app:boxCornerRadiusBottomStart="@dimen/text_input_corner"
            app:boxCornerRadiusTopEnd="@dimen/text_input_corner"
            app:boxCornerRadiusTopStart="@dimen/text_input_corner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:layout_marginRight="4dp"
            android:layout_weight="5"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/text_input_fname"
                android:hint="@string/first_name"
                android:text="Dawit"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            app:boxCornerRadiusBottomEnd="@dimen/text_input_corner"
            app:boxCornerRadiusBottomStart="@dimen/text_input_corner"
            app:boxCornerRadiusTopEnd="@dimen/text_input_corner"
            app:boxCornerRadiusTopStart="@dimen/text_input_corner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:layout_weight="5">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/text_input_lname"
                android:hint="@string/last_name"
                android:text="Samuel"/>
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            app:boxCornerRadiusBottomEnd="@dimen/text_input_corner"
            app:boxCornerRadiusBottomStart="@dimen/text_input_corner"
            app:boxCornerRadiusTopEnd="@dimen/text_input_corner"
            app:boxCornerRadiusTopStart="@dimen/text_input_corner"
            android:id="@+id/email_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/name_input_layout"
            app:layout_constraintBottom_toTopOf="@id/project_link_input_layout">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/text_input_email"
                android:hint="@string/email_address"
                android:text="acedawitt@gmail.com"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            app:boxCornerRadiusBottomEnd="@dimen/text_input_corner"
            app:boxCornerRadiusBottomStart="@dimen/text_input_corner"
            app:boxCornerRadiusTopEnd="@dimen/text_input_corner"
            app:boxCornerRadiusTopStart="@dimen/text_input_corner"
            android:id="@+id/project_link_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/email_input_layout"
            app:layout_constraintBottom_toTopOf="@id/submit_activity_submit_button">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/text_input_p_link"
                android:text="@string/default_link"
                android:hint="@string/project_on_github_link"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/submit_activity_submit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/submit"
            android:textAllCaps="false"
            android:focusable="true"
            android:clickable="true"
            android:backgroundTint="@color/orange"
            android:paddingRight="16dp"
            android:paddingLeft="16dp"
            android:textSize="20sp"
            app:cornerRadius="64dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/project_link_input_layout"
            style="@style/Widget.MaterialComponents.Button"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>