<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="16dp">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/confirm_close_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|end"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:src="@android:drawable/ic_menu_close_clear_cancel"
        app:backgroundTint="@android:color/tertiary_text_light" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginBottom="64dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="128dp"
        android:layout_marginBottom="96dp"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/are_you_sure"
            android:textColor="@android:color/tertiary_text_light"
            android:textSize="24sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:text="@string/question_mark"
            android:textColor="@android:color/tertiary_text_light"
            android:textSize="42sp" />
    </LinearLayout>
    <Button
        android:id="@+id/confirm_yes_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/yes"
        android:layout_gravity="center"
        android:textColor="@color/orange"
        android:clickable="true"
        android:focusable="true"
        android:textSize="20sp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        app:strokeColor="@color/orange"
        />
    </LinearLayout>


</com.google.android.material.card.MaterialCardView>